config/prow/cluster/hook_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prow
  name: hook
  annotations:
    kubernetes.io/ingress.class: public-iks-k8s-nginx
    nginx.ingress.kubernetes.io/rewrite-target: /hook
spec:
  defaultBackend:
    # specify the default backend for `ingress-gce` (https://cloud.google.com/kubernetes-engine/docs/concepts/ingress#prow_backend)
    service:
      name: deck
      port:
        number: 80
  rules:
    - host: prow.ppc64le-cloud.org
      http:
        paths:
          - path: /hook
            pathType: ImplementationSpecific
            backend:
              service:
                name: hook
                port:
                  number: 8888
          - path: /hook2
            pathType: ImplementationSpecific
            backend:
              service:
                name: hook2
                port:
                  number: 8888
  tls:
    - hosts:
        - prow.ppc64le-cloud.org
      secretName: ppc64le-cloud
